<resources>
    <string name="app_name">Rumbl-PT</string>
    <string name="txt_arabic">Arabic</string>
    <string name="txt_english">English</string>
    <string name="txt_socket_timout_exception_message">Please check your connectivity</string>
    <string name="txt_io_exception_message">Please check your network connectivity</string>
    <string name="txt_general_error">Something went wrong</string>
    <string name="something_went_wrong_retry">Something went wrong, please try again</string>
    <string name="retry_action">Retry</string>
    <string name="cancel">Cancel</string>
    <string name="do_you_have_a_problem">Do you have a problem ?</string>
    <string name="contact_us"><u>Contact us</u></string>
    <string name="next">Next</string>
    <string name="ksa_code">+966</string>
    <string name="xxxxxxxxxx">xxxxxxxxxx</string>
    <string name="phone_number">Phone number</string>
    <string name="login">LOGIN</string>
    <string name="new_password">New password</string>
    <string name="you_will_login_with_this_password">You will login with this password</string>
    <string name="resend">Resend</string>
    <string name="phone_verification">Phone verification</string>
    <string name="password">Password</string>
    <string name="wrong_phone_or_password">Wrong phone or password</string>
    <string name="unknown_error_occurred">Unknown error has occurred</string>
    <string name="password_length_error">password cannot be less than 8 characters</string>
    <string name="fill_all_fields">Please fill all the fields</string>
    <string name="home_tab">Home</string>
    <string name="requests_tab">Requests</string>
    <string name="schedule_tab">Schedule</string>
    <string name="notifications_tab">Notifications</string>
    <string name="profile_tab">Profile</string>
    <string name="accept_txt">Accept</string>
    <string name="latest_requests">Latest Requests</string>
    <string name="upcoming_sessions">Upcoming Sessions</string>
    <string name="training_session">Training Session</string>
    <string name="consultation_session">Consultation Session</string>
    <string name="trainer_name">Hello, %s</string>
    <string name="loading">loading...</string>
    <string name="requests">Requests</string>
    <string name="notifications">Notifications</string>
    <string name="my_account">My Account</string>
    <string name="certificates_expertise"><![CDATA[Certificates & expertise]]></string>
    <string name="gallery">Gallery</string>
    <string name="session_info">Session info</string>
    <string name="location">Location</string>
    <string name="navigate">Navigate</string>
    <string name="accept">Accept</string>
    <string name="decline">Decline</string>
    <string name="current_height">Current height</string>
    <string name="current_weight">Current weight</string>
    <string name="bmi">BMI</string>
    <string name="dash_empty_placeholder">-</string>
    <string name="date_and_time">Date and time</string>
    <string name="no_of_sessions">Number of %s sessions with you</string>
    <string name="schedule">Schedule</string>
    <string name="no_results">No results</string>
    <string name="session_booked_success">Session has been successfully selected</string>
    <string name="session_rejected">Session rejected successfully</string>
    <string name="no_sessions_available">No sessions available</string>
    <string name="start_session">Start Session</string>
    <string name="cancel_session">Cancel</string>


</resources>