<?xml version="1.0" encoding="utf-8"?>

<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/Theme.MaterialComponents.Light.NoActionBar"
    app:cardBackgroundColor="@color/white"
    app:cardCornerRadius="@dimen/_10dp_in">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/_30dp_in">

        <ImageView
            android:id="@+id/iv_err"
            android:layout_width="@dimen/_50dp_in"
            android:layout_height="@dimen/_50dp_in"
            android:layout_marginTop="@dimen/_30dp_in"
            android:src="@drawable/ic_warning_err"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/tv_dialog_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_30dp_in"
            android:layout_marginTop="@dimen/_20dp_in"
            android:layout_marginEnd="@dimen/_30dp_in"
            android:fontFamily="@font/sfprodisplay_bold"
            android:gravity="center"
            android:textColor="@color/gc_red"
            android:textSize="@dimen/_14sp_in"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/iv_err"
            tools:text="@string/something_went_wrong_retry" />

        <Button
            android:id="@+id/btn_retry"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_5dp_in"
            android:layout_marginTop="@dimen/_20dp_in"
            android:text="@string/retry_action"
            android:theme="@style/AppTheme"
            app:layout_constraintEnd_toEndOf="@id/tv_dialog_message"
            app:layout_constraintStart_toEndOf="@id/tv_dialog_cancel"
            app:layout_constraintTop_toBottomOf="@id/tv_dialog_message" />

        <TextView
            android:id="@+id/tv_dialog_cancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_5dp_in"
            android:fontFamily="@font/sfprodisplay_bold"
            android:gravity="center"
            android:padding="@dimen/_10dp_in"
            android:text="@string/cancel"
            android:textColor="@color/gc_red"
            android:textSize="@dimen/_14sp_in"
            app:layout_constraintBottom_toBottomOf="@id/btn_retry"
            app:layout_constraintEnd_toStartOf="@id/btn_retry"
            app:layout_constraintStart_toStartOf="@id/tv_dialog_message"
            app:layout_constraintTop_toTopOf="@id/btn_retry" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</com.google.android.material.card.MaterialCardView>

